Remove setting the pointer cursor when the context menu event is sent.

The cursor would flash when the context menu is sent if the event is
preventDefaulted. With a change https://codereview.chromium.org/2637403012
this occurred more frequently because the move event would get suppressed.

Ultimately I found when this code was activated in
https://codereview.chromium.org/7270 and it seems it was mis-guided in
being added. I've check on Windows removing this code makes everything
work fine.

BUG=699232

Review-Url: https://codereview.chromium.org/2755783002
Cr-Commit-Position: refs/heads/master@{#457418}

Former-commit-id: 7e40fe40d19b2c766df8d860169b11e2cacd9771