third_party/WebKit/Source/web/WebFrameWidgetImpl.cpp
@@ -800,10 +800,6 @@ void WebFrameWidgetImpl::mouseContextMenu(const WebMouseEvent& event) {
 
   LocalFrame* targetLocalFrame = toLocalFrame(targetFrame);
 
-#if OS(WIN)
-  targetLocalFrame->view()->setCursor(pointerCursor());
-#endif
-
   {
     ContextMenuAllowedScope scope;
     targetLocalFrame->eventHandler().sendContextMenuEvent(transformedEvent,
