third_party/WebKit/Source/web/WebViewImpl.cpp
@@ -574,11 +574,6 @@ void WebViewImpl::mouseContextMenu(const WebMouseEvent& event) {
     return;
 
   LocalFrame* targetLocalFrame = toLocalFrame(targetFrame);
-
-#if OS(WIN)
-  targetLocalFrame->view()->setCursor(pointerCursor());
-#endif
-
   {
     ContextMenuAllowedScope scope;
     targetLocalFrame->eventHandler().sendContextMenuEvent(transformedEvent,
